K8S-Manifest-Files/notes-app-deployment-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
      - name: notes-app-container
        image: syedmuhammadabbaskazmi/django-notes-app:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
