K8S-Manifest-Files/notes-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app
spec:
  type: NodePort
  selector:
    app: notes-app
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30081
